--- a/.github/workflows/infrastructure-ci-cd.yaml
+++ b/.github/workflows/infrastructure-ci-cd.yaml
@@ -2,6 +2,8 @@ name: Deploy Infrastructure
 
 on:
   push:
+    branches:
+      - main
     paths:
       - 'infrastructure/**'
 
@@ -12,6 +14,7 @@ concurrency:
 jobs:
   deploy-infrastructure:
     runs-on: ubuntu-latest
+    environment: staging
     permissions:
       id-token: write
       contents: read
