--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,11 +1,9 @@
-name: Deploy Infrastructure
+name: CD
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'infrastructure/**'
+on: push
+#  push:
+#    branches:
+#      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -45,3 +43,9 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve -input=false
         working-directory: ./infrastructure
+  deploy-backend:
+    runs-on: ubuntu-latest
+    needs:
+      - deploy-infrastructure
+    steps:
+      - run: echo Hello world from deploy-backed job
