--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,6 +13,8 @@ jobs:
   deploy-infrastructure:
     runs-on: ubuntu-latest
     environment: staging
+    outputs:
+      ec2-instance-id: ${{ steps.terraform-output.outputs.ec2-instance-id }}
     permissions:
       id-token: write
       contents: read
@@ -28,7 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       # TODO: Consider using docker action so we have consistency between local and CI
-      - uses: hashicorp/setup-terraform@v2
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.2
       - name: Terraform Init
@@ -40,12 +42,25 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -input=false
         working-directory: ./infrastructure
-      - name: Terraform Apply
+      - name: Terraform apply
         run: terraform apply -auto-approve -input=false
+        working-directory: ./infrastructure
+      - name: Terraform output
+        id: terraform-output
+        run: |
+          echo "ec2-instance-id=$(terraform output -raw ec2_instance_id)" >> "$GITHUB_OUTPUT"
+          cat $GITHUB_OUTPUT
         working-directory: ./infrastructure
   deploy-backend:
     runs-on: ubuntu-latest
     needs:
       - deploy-infrastructure
     steps:
-      - run: echo Hello world from deploy-backed job
+#      - name: Install AWS cli
+#        run: |
+#          curl "https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m).zip" -o "awscliv2.zip"
+#          unzip awscliv2.zip
+#          sudo ./aws/install
+      - name: Test show instance id
+        run: echo "${{ needs.deploy-infrastructure.outputs.ec2-instance-id }}"
+      - run:  aws ssm send-command --document-name "AWS-RunShellScript" --document-version "\$LATEST" --targets '[{"Key":"InstanceIds","Values":["${{ needs.deploy-infrastructure.outputs.ec2-instance-id }}"]}]' --parameters '{"commands":["eeecho \"Hello World from ssm run commanddddd\" > /tmp/res_from_github_actions.txt"]}' --timeout-seconds 600 --region eu-west-1
